@@ -4,6 +4,8 @@ Monthday, Month DD, YYYY:
       Sort the PUBHDR variable in Makefile.in in "ls" order.
       Fix typo in comment in pflog.h.
       Remove two no-longer-present files from .gitignore.
+      Update code and comments for handling failure to set promiscuous
+        mode based on new information.
     Building and testing:
       install: Fixed not to install the non-public pcap-util.h header.
       pcap-config: add a --version flag.
